# Qube

./: .gitignore  Doxyfile  README.md
install/: local_setup.sh  setup.sh
install/qube_bringup/share/ament_index/resource_index/parent_prefix_path/: qube_bringup
install/qube_bringup/share/qube_bringup/: local_setup.dsv  package.dsv  package.sh  package.zsh
install/qube_controller/share/qube_controller/: local_setup.dsv  package.bash  package.dsv  package.sh  package.zsh
install/qube_controller/share/qube_controller/cmake/: qube_controllerConfig.cmake
install/qube_description/share/qube_description/: package.bash  package.dsv
install/qube_description/share/qube_description/rviz/: default.rviz
src/qube_bringup/: CMakeLists.txt
src/qube_bringup/launch/: bringup.launch.py
src/qube_bringup/urdf/: controlled_qube.urdf.xacro
src/qube_controller/: CMakeLists.txt  package.xml
src/qube_controller/include/qube_controller/: delta_timer.hpp  lowpassFilter.hpp  pid_controller.hpp  qube_controller_node.hpp
src/qube_controller/src/: pid_controller.cpp  qube_controller_node.cpp
src/qube_description/: CMakeLists.txt  package.xml
src/qube_description/launch/: view_qube.launch.py
src/qube_description/urdf/: qube.macro.xacro  qube.urdf.xacro
src/qube_driver/: .gitignore
src/qube_driver/arduino/qube_ros2_driver/: QUBE.cpp  qube_ros2_driver.ino
src/qube_driver/include/qube_driver/: arduino_serial.hpp
src/reference_gui/: package.xml  setup.cfg  setup.py
src/reference_gui/reference_gui/: reference_gui.py
